projects component in progress

--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav 
+<nav
 style="
   display: flex;
   flex-direction: row;
@@ -14,5 +14,6 @@ style="
   <a routerLink="/teams" style="margin-right: 10px;">Teams</a>
   <ng-container *ngIf="isAdmin"><a routerLink="/users" style="margin-right: 10px;">Users</a></ng-container>
   <a routerLink="/" (click)="logout()" style="margin-right: 10px;">Logout</a>
+  <a routerLink="/projects"  style="margin-right: 10px;">Projects(TEMPORARY)</a>
 </div>
 </nav>
