Show New Announcements overlay

--- a/frontend/src/app/announcements/announcements.component.html
+++ b/frontend/src/app/announcements/announcements.component.html
@@ -1,4 +1,6 @@
 <app-navbar></app-navbar>
+<app-overlay></app-overlay>
+
 <div class="center">
   <h2>Announcements</h2>
   <div class="right-align">
@@ -73,4 +75,3 @@
     </div>
   </div>
 </div>
-<!-- <app-overlay></app-overlay> -->
