--- a/frontend/src/app/overlay/overlay.component.css
+++ b/frontend/src/app/overlay/overlay.component.css
@@ -14,3 +14,7 @@
   border: 1px solid #888;
   width: 80%; /* Could be more or less, depending on screen size */
 }
+
+.open-modal {
+  display: block;
+}
