Add text input components in Create Announcement overlay

--- a/frontend/src/app/text-input/text-input.component.html
+++ b/frontend/src/app/text-input/text-input.component.html
@@ -1,4 +1,4 @@
-<ng-container class="login-input">
+<ng-container class="text-input">
   <label for="control">{{ label }}</label>
   <input type="text" [formControl]="control" name="control" />
   <ng-container *ngIf="control.touched && control.errors" class="error">
