--- a/frontend/src/app/announcements/announcements.component.html
+++ b/frontend/src/app/announcements/announcements.component.html
@@ -1,12 +1,35 @@
 <app-navbar></app-navbar>
-<app-overlay></app-overlay>
+<app-overlay>
+  <div class="new-announcement-form-container">
+    <form
+      class="new-announcement"
+      [formGroup]="newAnnouncementForm"
+      (ngSubmit)="onNewAnnouncementFormSubmit()"
+    >
+      <app-text-input
+        [control]="$any(newAnnouncementForm.get('title'))"
+        label="Title"
+      ></app-text-input>
+      <app-text-input
+        [control]="$any(newAnnouncementForm.get('description'))"
+        label="Description"
+      ></app-text-input>
+      <br />
+      <button
+        class="inputs button"
+        type="submit"
+        [disabled]="newAnnouncementForm.invalid"
+      >
+        Submit
+      </button>
+    </form>
+  </div>
+</app-overlay>
 
 <div class="center">
   <h2>Announcements</h2>
   <div class="right-align">
-    <!-- <a href=""> -->
     <button class="btn-link" (click)="showNewAnnouncementModal()">New</button>
-    <!-- </a> -->
   </div>
   <hr />
   <div class="center">
