--- a/frontend/src/app/overlay/overlay.component.html
+++ b/frontend/src/app/overlay/overlay.component.html
@@ -1,5 +1,6 @@
 <div class="modal">
   <div class="modal-content">
-    <p>Some text in the Modal..</p>
+    <button class="btn-link" (click)="hide()">X</button>
+    <ng-content></ng-content>
   </div>
 </div>
