--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -9,7 +9,7 @@ style="
 >
 <div>
   <ng-container *ngIf="isAdmin">ACTING AS ADMIN</ng-container>
-  <a routerLink="/home" style="margin-right: 10px;">Home</a>
+  <a routerLink="/announcements" style="margin-right: 10px;">Home</a>
   <ng-container *ngIf="isAdmin"><a routerLink="/select-company" style="margin-right: 10px;">Company</a></ng-container>
   <a routerLink="/teams" style="margin-right: 10px;">Teams</a>
   <ng-container *ngIf="isAdmin"><a routerLink="/users" style="margin-right: 10px;">Users</a></ng-container>
