Add user button

--- a/frontend/src/app/users/users.component.css
+++ b/frontend/src/app/users/users.component.css
@@ -15,9 +15,9 @@ table {
     padding: 8px;
   }
   
-  tr:nth-child(even) {
+  /* tr:nth-child(even) {
     background-color: #dddddd;
-  }
+  } */
 
   .button-container{
     margin-top: 30px;
