--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,76 @@
-/* You can add global styles to this file, and also import other style files */
+/* bg rgb(5,22,34) #051622
+card bg rgb(11,45,69) #0B2D45
+buttons, text rgb(27,160,152) 1BA098
+orange text rgb(227,74,30) #E34A1E
+white text rgb(224,229,232) #E0E5E8 */
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+body {
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+  background-color: #051622;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+h1,
+h2,
+h3 {
+  color: #1ba098;
+  font-family: "Mulish";
+  font-style: normal;
+  font-weight: 400;
+}
+
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+img {
+  width: 8em;
+}
+
+.login-form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
