--- a/frontend/src/app/teams/teams.component.html
+++ b/frontend/src/app/teams/teams.component.html
@@ -4,13 +4,13 @@
     <div class="card">
       <div class="card-header">
         <h4 class="card-title">{{ team.name }}</h4>
-        <p class="card-subtitle">{{ team.projects.length }} projects</p>
+        <!-- <p class="card-subtitle">{{ team.projects.length }} projects</p> -->
       </div>
       <div class="card-body">
         <h5 class="card-title">Members</h5>
-        <div *ngFor="let member of team.teammates" class="sub-card">
-          <p>Hello</p>
-          <p>{{ member.profile.firstName }}{{ member.profile.lastName.charAt(0)}} </p>
+        <p>Hello</p>
+        <div *ngFor="let teammate of team.teammates" class="sub-card">
+          <p>{{ teammate.profile.firstName }}{{ teammate.profile.lastName.charAt(0)}} </p>
         </div>
       </div>
     </div>
