Modal and Text Input Styling

--- a/frontend/src/app/overlay/overlay.component.css
+++ b/frontend/src/app/overlay/overlay.component.css
@@ -8,11 +8,28 @@
 }
 
 .modal-content {
-  background-color: #fefefe;
+  /* background-color: #fefefe;
   margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  /* padding: 20px;
+  border: 1px solid #888; */
+  /* width: 80%; Could be more or less, depending on screen size */
+  position:absolute;
+	left:50%;
+	top:50%;
+	transform: translate(-50%,-50%);
+  background-color: rgba(0, 0, 0, 0.89);
+	border-radius:3px;
+	padding:20px 50px;
+}
+
+.box{
+	position:absolute;
+	left:50%;
+	top:50%;
+	transform: translate(-50%,-50%);
+    background-color: rgba(0, 0, 0, 0.89);
+	border-radius:3px;
+	padding:70px 100px;
 }
 
 .open-modal {
