--- a/frontend/src/app/text-input/text-input.component.css
+++ b/frontend/src/app/text-input/text-input.component.css
@@ -1,6 +1,6 @@
 .input-container{
 	position:relative;
-	margin-bottom:25px;
+	margin-bottom:15px;
 }
 .input-container label{
 	position:absolute;
@@ -30,5 +30,10 @@
 	top:-12px;
 	font-size:12px;
 	
+}
+
+.error{
+    color: red;
+    padding-bottom: 8px;
 }
 
