--- a/frontend/src/app/login/login.component.css
+++ b/frontend/src/app/login/login.component.css
@@ -1,4 +1,15 @@
+.login {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid red;
+}
+
 .login-page {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -6,6 +17,10 @@
 }
 
 .login-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   margin-top: 50px;
   border: 5px #deb992 solid;
   box-shadow: 4px 4px 10px 5px #cbcbcb7d;
@@ -13,8 +28,32 @@
   padding: 15px 100px 30px 100px;
 }
 
+.login-form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .form {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+img {
+  width: 8em;
+}
+
+button {
+  background-color: #051622;
+  border: #1ba098 2px solid;
+  width: 7rem;
+  height: 2.5rem;
+  border-radius: 20px;
+  font-size: 10px;
+  padding: 5px 15px;
+  color: #e0e5e8;
+  text-transform: uppercase;
+  cursor: pointer;
 }
