Styles Select Company page

--- a/frontend/src/app/select-company/select-company.component.html
+++ b/frontend/src/app/select-company/select-company.component.html
@@ -1,4 +1,4 @@
-
+<div class="select-company">
   <h2>Select Company</h2>
   <form class="container" [formGroup]="selectCompanyForm">
     <select
@@ -27,3 +27,4 @@
       </div>
     </ng-container>
   </form>
+</div>
