--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,24 +1,16 @@
-<nav
-  style="
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    color: blueviolet;
-    border-bottom: 3px solid black;
-  "
->
-  <div>
+<nav>
+  <div class="link-container">
     <ng-container *ngIf="isAdmin">ACTING AS ADMIN</ng-container>
-    <a routerLink="/announcements" style="margin-right: 10px">Home</a>
+    <a routerLink="/announcements" style="margin-right: 10px; float: right">Home</a>
     <ng-container *ngIf="isAdmin"
       ><a routerLink="/select-company" style="margin-right: 10px"
         >Company</a
       ></ng-container
     >
-    <a routerLink="/teams" style="margin-right: 10px">Teams</a>
+    <a routerLink="/teams" style="margin-right: 10px; float: right">Teams</a>
     <ng-container *ngIf="isAdmin"
-      ><a routerLink="/users" style="margin-right: 10px">Users</a></ng-container
+      ><a routerLink="/users" style="margin-right: 10px; float: right">Users</a></ng-container
     >
-    <a routerLink="/" (click)="logout()" style="margin-right: 10px">Logout</a>
+    <a routerLink="/" (click)="logout()" style="margin-right: 10px; float: right">Logout</a>
   </div>
 </nav>
