--- a/frontend/src/app/projects/projects.component.html
+++ b/frontend/src/app/projects/projects.component.html
@@ -1,32 +1,5 @@
 <app-navbar></app-navbar>
-<div class="projects">
-  <div class="projects-heading">
-    <div class="projects-heading-left">
-      <button (click)="goBack()">&lt; Back</button>
-    </div>
-    <div class="projects-heading-right">
-    <h1>Projects for {{ teamName }} </h1>
-    </div>
-  </div>
-  <div class="projects-body">
-    <button *ngIf="user?.admin === true" (click)="showProjectModal()">New</button>
-    <div *ngFor="let project of projects" class="project">
-      <div class="project-left">
-        <div class="project-heading">
-          <h2>{{ project.name }}</h2>
-          <p [ngClass]="{'active': project.active, 'inactive': !project.active}">
-            {{ project.active ? 'Active' : 'Inactive' }}</p>
-        </div>
-        <div class="project-body">
-          <p>{{ project.description }}</p>
-        </div>
-      </div>
-      <div class="project-right">
-        <button (click)="showProjectModal()">Edit</button>
-      </div>
-    </div>
-  </div>
-
+<div class="page-container">
   <app-overlay>
     <div class="new-announcement-form-container">
       <form
@@ -61,4 +34,32 @@
       </form>
     </div>
   </app-overlay>
+  <div class="projects">
+    <div class="projects-heading">
+      <div class="projects-heading-left">
+        <button (click)="goBack()">&lt; Back</button>
+      </div>
+      <div class="projects-heading-right">
+      <h1>Projects for {{ teamName }} </h1>
+      </div>
+    </div>
+    <div class="projects-body">
+      <button *ngIf="user?.admin === true" (click)="showProjectModal()">New</button>
+      <div *ngFor="let project of projects" class="project">
+        <div class="project-left">
+          <div class="project-heading">
+            <h2>{{ project.name }}</h2>
+            <p [ngClass]="{'active': project.active, 'inactive': !project.active}">
+              {{ project.active ? 'Active' : 'Inactive' }}</p>
+          </div>
+          <div class="project-body">
+            <p>{{ project.description }}</p>
+          </div>
+        </div>
+        <div class="project-right">
+          <button (click)="showProjectModal()">Edit</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
