--- a/frontend/src/app/teams/teams.component.html
+++ b/frontend/src/app/teams/teams.component.html
@@ -1,80 +1,101 @@
 <app-navbar></app-navbar>
-
-<app-overlay>
+<div class="page-container">
+  <app-overlay>
     <div class="new-team-form-container">
-        <form
-            class="new-team"
-            [formGroup]="newTeamForm"
-            (ngSubmit)="onNewTeamFormSubmit()"
-        >
-            <app-text-input
-            [control]="$any(newTeamForm.get('name'))"
-            label="Name"
-            ></app-text-input>
-
-            <app-text-input
-            [control]="$any(newTeamForm.get('description'))"
-            label="Description"
-            ></app-text-input>
-
-            <div class="members-dropdown">
-                <h2>Select Members</h2>
-                <label for="members">Pick an option:</label>
-                <select id="members" formControlName="members" (change)="updateSelectedMembers()" multiple>
-                  <option *ngFor="let member of availableMembers" [value]="member.id">{{ member.profile.firstName }} {{ member.profile.lastName.charAt(0) }}.</option>
-                </select>
-            </div>
-
-            <div class="selected-members">
-                <span *ngFor="let member of selectedMembers" class="selected-member">
-                    {{ member.profile.firstName }} {{ member.profile.lastName.charAt(0) }}.
-                    <button class="remove-member" (click)="removeSelectedMember(member.id)">X</button>
-                </span>
-
-            </div>
-
-            <br />
-            <button
-            class="inputs button"
-            type="submit"
-            [disabled]="newTeamForm.invalid"
-            >
-            Submit
-            </button>
-        </form>
-
-    </div>
-</app-overlay>
-
-<div *ngFor="let team of teams">
-  <a [routerLink]="['/projects']" [queryParams]="{ teamId: team.id }" class="team-link">
-    <div class="card">
-      <div class="card-header">
-        <h4 class="card-title">{{ team.name }}</h4>
-
-        <p class="card-subtitle"># of Projects: {{ projectCountsPerTeam[team.id] }}</p>
-      </div>
-      <div class="card-body">
-        <h5 class="card-title">Members</h5>
-        <div *ngFor="let member of team.teammates" class="sub-card">
-          <p>{{ member.profile.firstName }} {{ member.profile.lastName.charAt(0)}}. </p>
-
+      <form
+        class="new-team"
+        [formGroup]="newTeamForm"
+        (ngSubmit)="onNewTeamFormSubmit()"
+      >
+        <app-text-input
+          [control]="$any(newTeamForm.get('name'))"
+          label="Name"
+        ></app-text-input>
+        <app-text-input
+          [control]="$any(newTeamForm.get('description'))"
+          label="Description"
+        ></app-text-input>
+        <div class="members-dropdown">
+          <h2>Select Members</h2>
+          <label for="members">Pick an option:</label>
+          <select
+            id="members"
+            formControlName="members"
+            (change)="updateSelectedMembers()"
+            multiple
+          >
+            <option *ngFor="let member of availableMembers" [value]="member.id">
+              {{ member.profile.firstName }}
+              {{ member.profile.lastName.charAt(0) }}.
+            </option>
+          </select>
         </div>
-      </div>
-    </div>
-  </a>
-</div>
 
-<div *ngIf="user?.admin">
-    <ng-container>
+        <div class="selected-members">
+          <span *ngFor="let member of selectedMembers" class="selected-member">
+            {{ member.profile.firstName }}
+            {{ member.profile.lastName.charAt(0) }}.
+            <button
+              class="remove-member"
+              (click)="removeSelectedMember(member.id)"
+            >
+              X
+            </button>
+          </span>
+        </div>
+        <br />
         <button
-          *ngIf="user && user.admin"
-          class="btn-link"
-          (click)="showNewTeamModal()"
+          class="inputs button"
+          type="submit"
+          [disabled]="newTeamForm.invalid"
         >
-          New Team
+          Submit
         </button>
-      </ng-container>
+      </form>
+    </div>
+  </app-overlay>
+
+  <div class="card-container">
+    <div *ngFor="let team of teams" class="outer-card">
+      <a
+        [routerLink]="['/projects']"
+        [queryParams]="{ teamId: team.id }"
+        class="team-link"
+      >
+        <div class="card">
+          <div class="card-header">
+            <h4 class="card-title">{{ team.name }}</h4>
+
+            <p class="card-subtitle">
+              # of Projects: {{ projectCountsPerTeam[team.id] }}
+            </p>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Members</h5>
+            <div *ngFor="let member of team.teammates" class="sub-card">
+              <p>
+                {{ member.profile.firstName }}
+                {{ member.profile.lastName.charAt(0) }}.
+              </p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div *ngIf="user?.admin" class="outer-card">
+    <a>
+      <div class="card">
+        <ng-container>
+          <button
+            *ngIf="user && user.admin"
+            class="btn-link"
+            (click)="showNewTeamModal()"
+          >
+            New Team
+          </button>
+        </ng-container>
+      </div>
+    </a>
+  </div>
 </div>
-
-
