--- a/frontend/src/app/overlay/overlay.component.css
+++ b/frontend/src/app/overlay/overlay.component.css
@@ -5,6 +5,7 @@
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
+  left: 1%;
 }
 
 .modal-content {
