--- a/frontend/src/app/teams/teams.component.html
+++ b/frontend/src/app/teams/teams.component.html
@@ -46,24 +46,27 @@
     </div>
 </app-overlay>
 
-<div *ngFor="let team of teams">
-  <a [routerLink]="['/projects']" [queryParams]="{ teamId: team.id }" class="team-link">
-    <div class="card">
-      <div class="card-header">
-        <h4 class="card-title">{{ team.name }}</h4>
-
-        <p class="card-subtitle"># of Projects: {{ projectCountsPerTeam[team.id] }}</p>
-      </div>
-      <div class="card-body">
-        <h5 class="card-title">Members</h5>
-        <div *ngFor="let member of team.teammates" class="sub-card">
-          <p>{{ member.profile.firstName }} {{ member.profile.lastName.charAt(0)}}. </p>
-
+<div class="team-card-container">
+    <div *ngFor="let team of teams" class="team-card">
+        <a [routerLink]="['/projects']" [queryParams]="{ teamId: team.id }" class="team-link">
+            
+            <div class="card-header">
+                <h4 class="card-title">{{ team.name }}</h4>
+                <hr class="card-divider" />
+                <p class="card-subtitle"># of Projects: {{ projectCountsPerTeam[team.id] }}</p>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Members</h5>
+                <div *ngFor="let member of team.teammates" class="member-bubble">
+                <p>{{ member.profile.firstName }} {{ member.profile.lastName.charAt(0)}}. </p>
+    
+                </div>
+            </div>
+            
+        </a>
         </div>
-      </div>
-    </div>
-  </a>
 </div>
+    
 
 <div *ngIf="user?.admin">
     <ng-container>
