--- a/frontend/src/app/teams/teams.component.html
+++ b/frontend/src/app/teams/teams.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
-<div class="page-container">
-  <app-overlay>
+
+<app-overlay>
     <div class="new-team-form-container">
         <form
             class="new-team"
@@ -68,71 +68,14 @@
 </div>
     
 
-        <div class="selected-members">
-          <span *ngFor="let member of selectedMembers" class="selected-member">
-            {{ member.profile.firstName }}
-            {{ member.profile.lastName.charAt(0) }}.
-            <button
-              class="remove-member"
-              (click)="removeSelectedMember(member.id)"
-            >
-              X
-            </button>
-          </span>
-        </div>
-        <br />
+<div *ngIf="user?.admin">
+    <ng-container>
         <button
-          class="inputs button"
-          type="submit"
-          [disabled]="newTeamForm.invalid"
+          *ngIf="user && user.admin"
+          class="btn-link"
+          (click)="showNewTeamModal()"
         >
-          Submit
+          New Team
         </button>
-      </form>
-    </div>
-  </app-overlay>
-
-  <div class="card-container">
-    <div *ngFor="let team of teams" class="outer-card">
-      <a
-        [routerLink]="['/projects']"
-        [queryParams]="{ teamId: team.id }"
-        class="team-link"
-      >
-        <div class="card">
-          <div class="card-header">
-            <h4 class="card-title">{{ team.name }}</h4>
-
-            <p class="card-subtitle">
-              # of Projects: {{ projectCountsPerTeam[team.id] }}
-            </p>
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">Members</h5>
-            <div *ngFor="let member of team.teammates" class="sub-card">
-              <p>
-                {{ member.profile.firstName }}
-                {{ member.profile.lastName.charAt(0) }}.
-              </p>
-            </div>
-          </div>
-        </div>
-      </a>
-    </div>
-  </div>
-  <div *ngIf="user?.admin" class="outer-card">
-    <a>
-      <div class="card">
-        <ng-container>
-          <button
-            *ngIf="user && user.admin"
-            class="btn-link"
-            (click)="showNewTeamModal()"
-          >
-            New Team
-          </button>
-        </ng-container>
-      </div>
-    </a>
-  </div>
+      </ng-container>
 </div>
