--- a/frontend/src/app/navbar/navbar.component.css
+++ b/frontend/src/app/navbar/navbar.component.css
@@ -1,6 +1,5 @@
 a{
     text-decoration: none;
-    float: right;
     color: #1BA098
 }
 
@@ -9,10 +8,16 @@ nav{
     flex-direction: row;
     justify-content: space-evenly;
     color: red; 
-    border-bottom: 3px solid black;
+    font-size: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 50px;
+    padding-right: 30px;
 }
 
 .link-container{
-    width: 80%;
+    float:right;
+    width: auto;
+    height: auto;
 }
 
