--- a/frontend/src/app/teams/teams.component.css
+++ b/frontend/src/app/teams/teams.component.css
@@ -1,61 +1,79 @@
-.team-card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 10px;
-    max-width: 960px; /* Adjust the maximum width as needed */
-    margin: 0 auto;
+.card-container {
+    background-color: #051622;
+    height: 100vh;
+    width: 100vw;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    text-decoration: none;
   }
   
-  .team-card {
-    width: 313px;
-    height: 241px;
-    background-color: #0b2d45;
-    border-radius: 4px;
-    overflow: hidden;
-    color: #ffffff;
+  
+  .outer-card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  
+  }
+  
+  .card {
+    background-color: #0B2D45;
+    width: 250px;
+    height: 250px;
+    border-radius: 10px;
+    text-decoration: none;
+    margin: 20px;
+    padding: 10px;
+    /* border: 1px solid white; */
   }
   
   .card-header {
-    padding: 10px;
-    color: #ffffff;
+    color: #E0E5E8;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* padding: 5px 10px; */
+    border-bottom: 1px solid #E0E5E8;
   }
   
-  .card-divider {
-    border: none;
-    border-top: 1px solid #deb992;
-    margin: 5px 0;
-  }
-  
-  .card-title {
-    margin: 0;
+  .card-header h4 {
     font-size: 18px;
-    color: #ffffff;
+    padding: 0px 15px;
   }
   
-  .card-subtitle {
-    margin: 0;
-    font-size: 14px;
-    
-    color: #ffffff;
+  .card-header p {
+    font-size: 10px;
+    padding: 0px 15px;
+    font-weight: 200;
   }
   
   .card-body {
-    padding: 10px;
-    color: #ffffff;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 5px;
   }
   
-  .member-bubble {
-    display: inline-block;
-    padding: 5px 10px;
-    background-color: #1ba098;
-    border-radius: 20px;
-    margin-right: 5px;
-    margin-bottom: 5px;
-    font-size: 14px;
-    color: #ffffff;
+  .card-title {
+    grid-column: span 2;
+    color: #E0E5E8;
+    margin: 15px 0px 5px;
+    font-weight: 200;
+  }
+  .sub-card {
+    background-color: #1BA098;
+    grid-column: span 1;
+    border-radius: 5px;
+    color: #E0E5E8;
+    font-weight: 200;
   }
   
-  .member-bubble p {
-    margin: 0;
+  .sub-card p {
+    text-decoration: none;
+  }
+  
+  a {
+    text-decoration: none;
   }
