Fix Announcements flex styling

--- a/frontend/src/app/announcements/announcements.component.css
+++ b/frontend/src/app/announcements/announcements.component.css
@@ -1,26 +1,35 @@
-.projects {
+.announcements {
   width: 100vw;
-  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-
-.projects-heading {
+h1 {
+  margin: 1rem 0 0.5rem;
+}
+.announcements-heading {
+  width: 50vw;
   color: #1ba098;
   display: flex;
+  margin-bottom: 1rem;
 }
 
-.projects-heading-left {
+.announcements-heading-left {
   width: 25vw;
   display: flex;
   align-items: center;
 }
 
-.projects-heading-left button {
-  background-color: #051622;
-  color: #1ba098;
+.announcements-heading-right {
+  margin-left: auto;
+}
+
+.announcements-heading-right button {
+  background-color: #1ba098;
   border: none;
-  cursor: pointer;
+  border-radius: 5px;
+  font-size: 10px;
+  padding: 5px 15px;
+  color: #e0e5e8;
 }
