Disabled button styling

--- a/frontend/src/app/users/users.component.css
+++ b/frontend/src/app/users/users.component.css
@@ -81,6 +81,18 @@ table {
 	position:relative;
   }
 
+  .btn:disabled, .btn[disabled]{
+    background-color: #cccccc;
+    height: 30px;
+    width: 90px;
+    border: none;
+    border-radius: 12px;
+    color: rgb(19, 16, 16);
+    margin-top:50px;
+	cursor: not-allowed;
+	position:relative;
+}
+
   body{
     background-color: rgb(5, 22, 34);
   }
