Added logo to nav

--- a/frontend/src/app/navbar/navbar.component.css
+++ b/frontend/src/app/navbar/navbar.component.css
@@ -11,7 +11,7 @@ nav{
     font-size: 25px;
     padding-top: 10px;
     padding-bottom: 10px;
-    padding-left: 50px;
+    padding-left: 20px;
     padding-right: 30px;
 }
 
@@ -19,5 +19,22 @@ nav{
     float:right;
     width: auto;
     height: auto;
+    margin-top: 13px;
+}
+img{
+    height: 70px;
+    width: 70px;
+    float: left;
+}
+
+.nav-logo{
+    width:auto;
+    height:auto
+}
+
+.admin{
+    float:left;
+    padding-top: 13px;
+    margin-left: 10px;
 }
 
