--- a/frontend/src/app/announcements/announcements.component.css
+++ b/frontend/src/app/announcements/announcements.component.css
@@ -33,3 +33,18 @@ h1 {
   padding: 5px 15px;
   color: #e0e5e8;
 }
+
+#modal-submit-btn {
+  background-color: #1ba098;
+  border: none;
+  border-radius: 5px;
+  font-size: 10px;
+  padding: 5px 35px;
+  color: #e0e5e8;
+}
+
+.submit-btn-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
