--- a/frontend/src/app/overlay/overlay.component.css
+++ b/frontend/src/app/overlay/overlay.component.css
@@ -1,5 +1,5 @@
 .modal {
-  display: block; /* Hidden by default */
+  display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
   width: 100%; /* Full width */
