--- a/frontend/src/app/teams/teams.component.html
+++ b/frontend/src/app/teams/teams.component.html
@@ -82,20 +82,26 @@
         </div>
       </a>
     </div>
+    <div *ngIf="user?.admin" class="outer-card">
+      <a>
+        <div class="card" id="new-team-card"
+        *ngIf="user && user.admin"
+        (click)="showNewTeamModal()"
+        >
+          <!-- <ng-container> -->
+            <!-- <button
+              *ngIf="user && user.admin"
+              class="btn-link"
+              (click)="showNewTeamModal()"
+            >
+              New Team
+            </button> -->
+          <!-- </ng-container> -->
+          <img src="assets/x.png" alt="add_team_x">
+          <p>New Team</p>
+        </div>
+      </a>
+    </div>
   </div>
-  <div *ngIf="user?.admin" class="outer-card">
-    <a>
-      <div class="card">
-        <ng-container>
-          <button
-            *ngIf="user && user.admin"
-            class="btn-link"
-            (click)="showNewTeamModal()"
-          >
-            New Team
-          </button>
-        </ng-container>
-      </div>
-    </a>
-  </div>
+
 </div>
